modifiche per migliorare performance

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-   "scripts": {
-    "dev": "next dev --webpack",
+  "scripts": {
+    "dev": "next dev --turbo",
     "build": "next build --webpack",
     "start": "next start"
   },
@@ -11,7 +11,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
-    "@mui/material": "^7.3.7",
+    "@mui/material": "^7.3.8",
+    "@mui/material-nextjs": "^7.3.8",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
